--- a/basket/templates/basket/view_basket.html
+++ b/basket/templates/basket/view_basket.html
@@ -2,6 +2,25 @@
 {% load custom_filters %}
 
 {% block content %}
+<div class="modal fade" id="confirmRemoveModal" tabindex="-1" role="dialog" aria-labelledby="confirmRemoveModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="confirmRemoveModalLabel">Confirm Remove Item</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to remove this item from your basket?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <a id="confirm-remove-btn" href="#" class="btn btn-danger">Remove</a>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="container mt-5">
   <h1>Your Shopping Basket</h1>
   <table class="table table-striped">
@@ -33,7 +52,7 @@
           </td>
           <td>{{ item.product.price|multiply:item.quantity }}</td>
           <td>
-            <a href="{% url 'remove_from_basket' item.id %}" class="btn btn-danger btn-sm">Remove</a>
+            <a href="#" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#confirmRemoveModal" data-item-id="{{ item.id }}">Remove</a>
           </td>
         </tr>
       {% empty %}
@@ -57,6 +76,7 @@
 
 {% block postloadjs %}
 <script>
+  
   function increaseQuantity(itemId) {
     var quantityInput = document.getElementById('quantity_' + itemId);
     var currentValue = parseInt(quantityInput.value);
@@ -86,5 +106,13 @@
       form.querySelector('button[type="submit"]').click(); // submit the form
     });
   });
+
+  $(document).ready(function() {
+    $('#confirmRemoveModal').on('show.bs.modal', function(e) {
+      var itemId = $(e.relatedTarget).data('item-id');
+      $('#confirm-remove-btn').attr('href', '{% url "remove_from_basket" 0 %}'.replace('0', itemId));
+    });
+  });
+
 </script>
 {% endblock %}
