--- a/basket/templates/basket/view_basket.html
+++ b/basket/templates/basket/view_basket.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 {% load custom_filters %}
 
 {% block content %}
@@ -24,68 +25,70 @@
 </div>
 <div class="container mt-5">
   <h1>Your Shopping Basket</h1>
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>Product</th>
-        <th>Price</th>
-        <th>Quantity</th>
-        <th>Total</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for item in basket_items %}
-      <tr>
-        <td>{{ item.product.name }}</td>
-        <td>
-          {% if item.discounted_price %}
-          <del>${{ item.product.price }}</del> ${{ item.discounted_price }}
-          {% else %}
-          ${{ item.product.price }}
-          {% endif %}
-        </td>
-        <td>
-          <form method="post" action="{% url 'update_basket' item.id %}">
-            {% csrf_token %}
-            <input type="hidden" name="basket_item_id" value="{{ item.id }}">
-            <div class="input-group">
-              <button class="btn btn-outline-secondary" type="button"
-                onclick="decreaseQuantity('{{ item.id }}')">-</button>
-              <input id="quantity_{{ item.id }}" type="number" class="form-control" name="quantity"
-                value="{{ item.quantity }}" min="1" max="100">
-              <button class="btn btn-outline-secondary" type="button"
-                onclick="increaseQuantity('{{ item.id }}')">+</button>
+  <hr>
+  <div class="table-container">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th></th>
+          <th>Product</th>
+          <th>Price</th>
+          <th>Quantity</th>
+          <th>Total</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for item in basket_items %}
+        <tr>
+          <td><img src="{{ item.product.image.url }}" width="90" height="120"></td>
+          <td>{{ item.product.name }}</td>
+          <td>
+            {% if item.discounted_price %}
+            <del>${{ item.product.price }}</del> <span class="discount">${{ item.discounted_price }}</span>
+            {% else %}
+            ${{ item.product.price }}
+            {% endif %}
+          </td>
+          <td>
+            <form method="post" action="{% url 'update_basket' item.id %}">
+              {% csrf_token %}
+              <input type="hidden" name="basket_item_id" value="{{ item.id }}">
+              <input id="quantity_{{ item.id }}" type="number" class="form-control qty" name="quantity" value="{{ item.quantity }}" min="1" max="10">
+              <button class="btn btn-outline-secondary btn-qty" type="button" onclick="decreaseQuantity('{{ item.id }}')"><strong>-</strong></button>
+              <button class="btn btn-outline-secondary btn-qty" type="button" onclick="increaseQuantity('{{ item.id }}')"><strong>+</strong></button>
+              <button type="submit" name="action" value="update" style="display:none"></button>
+            </form>
+          </td>
+          <td>
+            {% if item.discounted_price %}
+            ${{ item.discounted_price|multiply:item.quantity }}
+            {% else %}
+            ${{ item.product.price|multiply:item.quantity }}
+            {% endif %}
+          </td>
+          <td>
+            <div style="display: flex; flex-direction: column; align-items: center;">
+              <a href="#" class="text-dark" data-toggle="modal" data-target="#confirmRemoveModal" data-item-id="{{ item.id }}">
+                <i class="fa-solid fa-trash-can"></i>
+              </a>
+              <small class="btn-remove text-muted">Remove</small>
             </div>
-            <button type="submit" name="action" value="update" style="display:none"></button>
-          </form>
-        </td>
-        <td>
-          {% if item.discounted_price %}
-          ${{ item.discounted_price|multiply:item.quantity }}
-          {% else %}
-          ${{ item.product.price|multiply:item.quantity }}
-          {% endif %}
-        </td>
-        <td>
-          <a href="#" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#confirmRemoveModal"
-            data-item-id="{{ item.id }}">Remove</a>
-        </td>
-      </tr>
-      {% empty %}
-      <tr>
-        <td colspan="5">Your basket is empty.</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+          </td>
+        </tr>
+        {% empty %}
+        <tr>
+          <td colspan="5">Your basket is empty.</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
   <div class="row">
-    <div class="col-6">
-      <a href="{% url 'products' %}" class="btn btn-primary">Continue Shopping</a>
-    </div>
-    <div class="col-6 text-right">
+    <div class="m-3 text-left">
       <p><strong>Total: </strong>${{ basket_total }}</p>
       <a href="#" class="btn btn-success">Checkout</a>
+      <a href="{% url 'products' %}" class="btn btn-primary my-2">Continue Shopping</a>
     </div>
   </div>
 </div>
@@ -96,7 +99,7 @@
   function increaseQuantity(itemId) {
     var quantityInput = document.getElementById('quantity_' + itemId);
     var currentValue = parseInt(quantityInput.value);
-    if (!isNaN(currentValue) && currentValue < 100) {
+    if (!isNaN(currentValue) && currentValue < 10) {
       quantityInput.value = currentValue + 1;
       quantityInput.dispatchEvent(new Event('change')); // trigger validation
     }
@@ -115,7 +118,7 @@
   Array.prototype.forEach.call(quantityInputs, function (quantityInput) {
     quantityInput.addEventListener('change', function () {
       var currentValue = parseInt(quantityInput.value);
-      if (isNaN(currentValue) || currentValue < 1 || currentValue > 100) {
+      if (isNaN(currentValue) || currentValue < 1 || currentValue > 10) {
         quantityInput.value = '1'; // reset to default value
       }
       var form = quantityInput.closest('form');
