--- a/catalog/templates/home/add_product.html
+++ b/catalog/templates/home/add_product.html
@@ -2,89 +2,116 @@
 {% load static %}
 
 {% block content %}
-  <div class="container my-5">
-    <div class="row justify-content-center">
-      <div class="col-md-8">
-        <h1 class="mb-4">Add a Candle</h1>
-        <form method="post" enctype="multipart/form-data">
-          {% csrf_token %}
-          <div class="form-group">
-            {{ candle_form.name.label_tag }}
-            {{ candle_form.name }}
+<div class="container col my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6 justify-content-center">
+      <h1 class="mb-4">Add a Candle</h1>
+      <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="form-group">
+          {{ candle_form.name.label_tag }}
+          {{ candle_form.name }}
+        </div>
+        <div class="form-group">
+          <div class="row">
+            <div class="col-12">
+              {{ candle_form.description.label_tag }}
+            </div>
           </div>
-          <div class="form-group">
-            {{ candle_form.description.label_tag }}
-            {{ candle_form.description }}
+          <div class="row">
+            <div class="col-12">
+              {{ candle_form.description }}
+            </div>
           </div>
-          <div class="form-group">
-            {{ candle_form.price.label_tag }}
-            {{ candle_form.price }}
-          </div>
-          <div class="form-group">
-            {{ candle_form.discounted_price.label_tag }}
-            {{ candle_form.discounted_price }}
-          </div>
-          <div class="form-group">
-            {{ candle_form.image.label_tag }}
-            {{ candle_form.image }}
-          </div>
-          <div class="form-group">
-            {{ candle_form.is_available.label_tag }}
-            {{ candle_form.is_available }}
-          </div>
-          <div class="form-group">
-            {{ candle_form.scent.label_tag }}
-            {{ candle_form.scent }}
-          </div>
-          <div class="form-group">
-            {{ candle_form.burn_time.label_tag }}
-            {{ candle_form.burn_time }}
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-      </div>
+        </div>
+
+        <div>
+          {{ candle_form.price.label_tag }}
+          {{ candle_form.price }}
+        </div>
+        <div>
+          {{ candle_form.discounted_price.label_tag }}
+          {{ candle_form.discounted_price }}
+        </div>
+
+        <div>
+          {{ candle_form.image.label_tag }}
+          {{ candle_form.image }}
+        </div>
+
+
+        <div>
+          {{ candle_form.scent.label_tag }}
+          {{ candle_form.scent }}
+        </div>
+
+
+        <div>
+          {{ candle_form.burn_time.label_tag }}
+          {{ candle_form.burn_time }}
+        </div>
+        <div>
+          {{ candle_form.is_available.label_tag }}
+          {{ candle_form.is_available }}
+        </div>
+        <button type="submit" class="btn btn-primary mt-3">Submit</button>
+      </form>
     </div>
 
-    <div class="row justify-content-center mt-5">
-      <div class="col-md-8">
-        <h1 class="mb-4">Add an Essential Oil</h1>
-        <form method="post" enctype="multipart/form-data">
-          {% csrf_token %}
-          <div class="form-group">
-            {{ oil_form.name.label_tag }}
-            {{ oil_form.name }}
+    <div class="col-md-6 justify-content-center">
+      <h1 class="mb-4">Add an Essential Oil</h1>
+      <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="form-group">
+          {{ oil_form.name.label_tag }}
+          {{ oil_form.name }}
+        </div>
+        <div class="form-group">
+          <div class="row">
+            <div class="col-12">
+              {{ oil_form.description.label_tag }}
+            </div>
           </div>
-          <div class="form-group">
-            {{ oil_form.description.label_tag }}
-            {{ oil_form.description }}
+          <div class="row">
+            <div class="col-12">
+              {{ oil_form.description }}
+            </div>
           </div>
-          <div class="form-group">
-            {{ oil_form.price.label_tag }}
-            {{ oil_form.price }}
-          </div>
-          <div class="form-group">
-            {{ oil_form.discounted_price.label_tag }}
-            {{ oil_form.discounted_price }}
-          </div>
-          <div class="form-group">
-            {{ oil_form.image.label_tag }}
-            {{ oil_form.image }}
-          </div>
-          <div class="form-group">
-            {{ oil_form.is_available.label_tag }}
-            {{ oil_form.is_available }}
-          </div>
-          <div class="form-group">
-            {{ oil_form.scent.label_tag }}
-            {{ oil_form.scent }}
-          </div>
-          <div class="form-group">
-            {{ oil_form.volume.label_tag }}
-            {{ oil_form.volume }}
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-      </div>
+        </div>
+
+        <div>
+          {{ oil_form.price.label_tag }}
+          {{ oil_form.price }}
+        </div>
+        <div>
+          {{ oil_form.discounted_price.label_tag }}
+          {{ oil_form.discounted_price }}
+        </div>
+
+        <div>
+          {{ oil_form.image.label_tag }}
+          {{ oil_form.image }}
+        </div>
+
+
+        <div>
+          {{ oil_form.scent.label_tag }}
+          {{ oil_form.scent }}
+        </div>
+
+
+        <div>
+          {{ oil_form.volume.label_tag }}
+          {{ oil_form.volume }}
+        </div>
+        <div>
+          {{ oil_form.is_available.label_tag }}
+          {{ oil_form.is_available }}
+        </div>
+
+        <button type="submit" class="btn btn-primary mt-3">Submit</button>
+      </form>
     </div>
   </div>
+</div>
 {% endblock %}
