--- a/catalog/templates/home/products.html
+++ b/catalog/templates/home/products.html
@@ -40,9 +40,9 @@
                 <p class="card-text">Scent: {{ candle.scent }}</p>
                 <p class="card-text">Burn time: {{ candle.burn_time }}</p>
                 {% if candle.discounted_price %}
-                <p class="card-text"><small class="text-muted">Price: <span class="strike">${{ candle.price }}</span> -> ${{ candle.discounted_price }}</small></p>
+                <del>${{ candle.price }}</del> <span class="discount">${{ candle.discounted_price }}</span>
                 {% else %}
-                <p class="card-text"><small class="text-muted">Price: ${{ candle.price }}</small></p>
+                ${{ candle.price }}
                 {% endif %}
                 <p class="text-muted">
                   <i class="fas fa-star mr-1"></i>
@@ -72,9 +72,9 @@
               <p class="card-text">Scent: {{ oil.scent }}</p>
               <p class="card-text">Volume: {{ oil.volume }}</p>
               {% if oil.discounted_price %}
-              <p class="card-text"><small class="text-muted">Price: <span class="strike">${{ oil.price }}</span> -> ${{ oil.discounted_price }}</small></p>
+              <del>${{ oil.price }}</del> <span class="discount">${{ oil.discounted_price }}</span>
               {% else %}
-              <p class="card-text"><small class="text-muted">Price: ${{ oil.price }}</small></p>
+              ${{ oil.price }}
               {% endif %}
               <p class="text-muted">
                 <i class="fas fa-star mr-1"></i>
