--- a/catalog/templates/home/specials.html
+++ b/catalog/templates/home/specials.html
@@ -33,7 +33,7 @@
                 <p class="card-text">Scent: {{ product.essentialoil.scent }}</p>
                 <p class="card-text">Volume: {{ product.essentialoil.volume }}</p>
               {% endif %}
-              <p class="card-text"><small class="text-muted">Price: <span class="strike">${{ product.price }}</span>-> ${{ product.discounted_price }}</small></p>
+              <p class="card-text"><small class="text-muted">Price: <del>${{ product.price }}</del> <span class="discount">${{ product.discounted_price }}</span></small></p>
               <p class="text-muted">
                 <i class="fas fa-star mr-1"></i>
                 {% if product.avg_rating %}
