--- a/templates/base.html
+++ b/templates/base.html
@@ -77,14 +77,16 @@
           <li class="list-inline-item">
             <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_basket' %}">
               <div class="text-center">
-                <div><i class="fas fa-shopping-bag fa-lg text-white"></i></div>
-                <p class="my-0 text-white">
-                  {% if grand_total %}
-                  ${{ grand_total|floatformat:2 }}
-                  {% else %}
-                  $0.00
-                  {% endif %}
-                </p>
+                <div>
+                  <i class="fas fa-shopping-bag fa-lg text-white"></i>
+                  <p class="my-0 text-white">
+                    {% if grand_total %}
+                    ${{ grand_total|floatformat:2 }}
+                    {% else %}
+                    $0.00
+                    {% endif %}
+                  </p>
+                </div>
               </div>
             </a>
           </li>
