Add toasts and messages

--- a/basket/templates/basket/view_basket.html
+++ b/basket/templates/basket/view_basket.html
@@ -95,6 +95,8 @@
 {% endblock %}
 
 {% block postloadjs %}
+{{ block.super }}
+
 <script>
   function increaseQuantity(itemId) {
     var quantityInput = document.getElementById('quantity_' + itemId);
