--- a/static/css/base.css
+++ b/static/css/base.css
@@ -97,6 +97,24 @@ body {
     cursor: pointer;
 }
 
+
+/* ********** BOOTSTRAP TOASTS *********** */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
+
 /* ********** BASKET PAGE *********** */
 
 .jumbotron {
