--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -1,24 +1,27 @@
 {% extends "account/base.html" %}
-
 {% load i18n %}
 {% load account %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
+  <div class="container">
+    <h1 class="text-center mb-5">{% trans "Password Reset" %}</h1>
 
-    <h1>{% trans "Password Reset" %}</h1>
     {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
+      <div class="alert alert-warning">
+        {% include "account/snippets/already_logged_in.html" %}
+      </div>
     {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+    <p class="lead">{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit" class="btn btn-primary">{% trans 'Reset My Password' %}</button>
     </form>
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    <p class="mt-3">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+  </div>
 {% endblock %}
