--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -1,9 +1,14 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
+
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+  <div class="container mt-5">
+    <h1 class="text-center">{% trans "Change Password" %}</h1>
+    <div class="mt-5">
+      <p class="text-center">{% trans 'Your password has been changed successfully.' %}</p>
+    </div>
+  </div>
 {% endblock %}
