--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -5,11 +5,19 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+  <div class="container my-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <h1 class="text-center">{% trans "Set Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+        <form method="POST" action="{% url 'account_set_password' %}" class="password_set mt-5">
+          {% csrf_token %}
+          {{ form.as_p }}
+          <div class="text-center">
+            <input type="submit" name="action" value="{% trans 'Set Password' %}" class="btn btn-primary"/>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 {% endblock %}
