--- a/templates/base.html
+++ b/templates/base.html
@@ -80,10 +80,10 @@
                 <div>
                   <i class="fas fa-shopping-bag fa-lg text-white"></i>
                   <p class="my-0 text-white">
-                    {% if grand_total %}
-                    ${{ grand_total|floatformat:2 }}
+                    {% if basket_total %}
+                    ${{ basket_total|floatformat:2 }}
                     {% else %}
-                    $0.00
+                        $0.00
                     {% endif %}
                   </p>
                 </div>
