--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -54,9 +54,10 @@
       </div>
       {% endfor %}
       <hr class="my-0">
-      <div class="row text-black text-right">
-        <div class="col-7 offset-2">
-          <p class="my-0">Order Total: ${{ basket_total }}</p>
+      <div class="row text-black">
+        <div class="col-10 offset-2 text-right">
+          <p class="my-0"><strong>Free Delivery</strong></p>
+          <p class="my-0"><strong>Order Total: ${{ basket_total }}</strong></p>
         </div>
       </div>
     </div>
@@ -131,5 +132,8 @@
 {% endblock %}
 
 {% block postloadjs %}
-
+  {{ block.super }}
+  {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+  {{ client_secret|json_script:"id_client_secret" }}
+  <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
 {% endblock %}
