--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,9 @@
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   {% endblock %}
 
+  {% block extra_css %}
+  {% endblock %}
+  
   {% block corejs %}
   <script src="https://kit.fontawesome.com/f5991483d4.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
