--- a/checkout/templates/checkout/order_detail.html
+++ b/checkout/templates/checkout/order_detail.html
@@ -172,7 +172,18 @@
         <span class="text-uppercase">Now check out the latest deals!</span>
       </a>
       {% endif %}
+      <a href="{% url 'orders' %}" class="btn btn-checkout">Order history</a>
     </div>
   </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+<script>
+  window.onpopstate = function(event) {
+    event.preventDefault();
+    history.pushState(null, null, 'home'); // replace '/' with your home page URL
+    location.reload(); // reload the page to go to the home page
+  }
+</script>
 {% endblock %}
