--- a/profiles/templates/profiles/profiles.html
+++ b/profiles/templates/profiles/profiles.html
@@ -1,13 +1,31 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block extra_title %}
+    {{ request.user.username }}'s Profile
+{% endblock %}
 
 {% block content %}
-  <h1>Profile</h1>
-  <p>Username: {{ user_profile.user.username }}</p>
-  <p>Email: {{ user_profile.user.email }}</p>
-  <p>Phone number: {{ user_profile.phone_number }}</p>
-  <p>Address line 1: {{ user_profile.address_line_1 }}</p>
-  <p>Address line 2: {{ user_profile.address_line_2 }}</p>
-  <p>City: {{ user_profile.city }}</p>
-  <p>Country: {{ user_profile.country }}</p>
-  <p>Postcode: {{ user_profile.postcode }}</p>
+<div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <hr>
+                <h2 class="logo-font mb-4">My Profile</h2>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-lg-6 mb-5">
+                <p class="text-muted">Default Delivery Information</p>
+                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="btn btn-checkout rounded-0 text-uppercase float-right">Update Information</button>
+                </form>
+                <a href="{% url 'order_history' %}" class="btn btn-checkout rounded-0 text-uppercase">Order history</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
