--- a/catalog/templates/home/add_product.html
+++ b/catalog/templates/home/add_product.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block extra_title %}Add product{% endblock %}
+
 {% block content %}
 <div class="container col my-5">
   <div class="row justify-content-center">
