--- a/catalog/templates/home/candles.html
+++ b/catalog/templates/home/candles.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load custom_filters %}
-{% block extra_title %}/ Candles {% endblock %}
+
+{% block extra_title %} Candles {% endblock %}
 
 {% block content %}
   <div class="container mt-5">
