--- a/catalog/templates/home/edit_product.html
+++ b/catalog/templates/home/edit_product.html
@@ -10,6 +10,8 @@
     </div>
 {% endblock %}
 
+{% block extra_title %}Edit product{% endblock %}
+
 {% block content %}
     <div class="overlay"></div>
     <div class="container">
