--- a/catalog/templates/home/essential_oils.html
+++ b/catalog/templates/home/essential_oils.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load custom_filters %}
-{% block extra_title %}/ Essential Oils {% endblock %}
+{% block extra_title %} Essential Oils {% endblock %}
 
 {% block content %}
   <div class="container mt-5">
