--- a/catalog/templates/home/product_details.html
+++ b/catalog/templates/home/product_details.html
@@ -2,6 +2,8 @@
 {% load custom_filters %}
 {% load crispy_forms_tags %}
 
+{% block extra_title %}Product details{% endblock %}
+
 {% block content %}
 <div class="container my-5">
     <div class="row">
