--- a/catalog/templates/home/products.html
+++ b/catalog/templates/home/products.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load custom_filters %}
-{% block extra_title %}/ All Products {% endblock %}
+{% block extra_title %} All Products {% endblock %}
 
 {% block content %}
   <div class="container mt-3">
