--- a/catalog/templates/home/specials.html
+++ b/catalog/templates/home/specials.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load custom_filters %}
-{% block extra_title %}/ Specials {% endblock %}
+{% block extra_title %} Specials {% endblock %}
 {% block content %}
   <div class="container mt-5">
     <div class="col-12 col-md-6 order-md-first">
