--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
+{% block extra_title %}Checkout{% endblock %}
+
 {% block content %}
   <div class="overlay"></div>
   <div class="container">
@@ -61,21 +63,14 @@
               {{ coupon_form }}
             </div>
             <div class="col-4">
-              <button type="submit" class="btn btn-primary btn-block">Apply Coupon</button>
+              <button type="submit" class="btn btn-checkout">Apply Coupon</button>
             </div>
           </div>
         </form>
         {{ order.coupon }}
-        {% if messages %}
-        <ul class="messages">
-          {% for message in messages %}
-          <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-          {% endfor %}
-        </ul>
-        {% endif %}
         {% if coupon %}
         <div class="col-12 text-right">
-          <p>Coupon Applied. Discount {{ coupon.discount }}% . You saved ${{ coupon_saved }}</p>
+          <p>Coupon applied with <strong>{{ coupon.discount }}%</strong> discount. You saved <strong>${{ coupon_saved }}</strong></p>
         </div>
         {% endif %}
         <hr class="my-0">
@@ -124,13 +119,13 @@
           </fieldset>
 
           <div class="submit-button text-right mt-5 mb-2">
-            <a href="{% url 'view_basket' %}" class="btn btn-outline-black rounded-0">
+            <a href="{% url 'view_basket' %}" class="btn btn-checkout">
               <span class="icon">
                 <i class="fas fa-chevron-left"></i>
               </span>
               <span class="font-weight-bold">Adjust Basket</span>
             </a>
-            <button id="submit-button" class="btn btn-black rounded-0">
+            <button id="submit-button" class="btn btn-checkout">
               <span class="font-weight-bold">Complete Order</span>
               <span class="icon">
                 <i class="fas fa-lock"></i>
