--- a/checkout/templates/checkout/order_detail.html
+++ b/checkout/templates/checkout/order_detail.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
+{% block extra_title %}Order Details{% endblock %}
+
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
