--- a/profiles/templates/profiles/profiles.html
+++ b/profiles/templates/profiles/profiles.html
@@ -2,30 +2,34 @@
 {% load static %}
 
 {% block extra_title %}
-    {{ request.user.username }}'s Profile
+{{ request.user.username }}'s Profile
 {% endblock %}
 
 {% block content %}
 <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">My Profile</h2>
-                <hr>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-lg-6 mb-5">
-                <p class="text-muted">Default Delivery Information</p>
-                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
-                    {% csrf_token %}
-                    {{ form|crispy }}
-                    <button class="btn btn-checkout rounded-0 text-uppercase float-right">Update Information</button>
-                </form>
-                <a href="{% url 'order_history' %}" class="btn btn-checkout rounded-0 text-uppercase">Order history</a>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <hr>
+            <h2 class="logo-font mb-4">My Profile</h2>
+            <hr>
         </div>
     </div>
+    <div class="row">
+        <div class="col-6">
+            <p class="text-muted">Default Delivery Information</p>
+            <p>{{ profile.user.first_name }}</p>
+            <p>{{ profile.user.last_name }}</p>
+            <p>{{ profile.user.email }}</p>
+            <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button class="btn btn-checkout rounded-0 text-uppercase float-left">Update Information</button>
+            </form>
+            <a href="{% url 'order_history' %}" class="btn btn-checkout rounded-0 text-uppercase float-right">
+                Order history <span class="icon mr-2"><i class="fas fa-angle-right"></i></span></a>
+        </div>
+    </div>
+</div>
 </div>
 {% endblock %}
