--- a/checkout/templates/checkout/order_detail.html
+++ b/checkout/templates/checkout/order_detail.html
@@ -147,7 +147,7 @@
         </div>
         {% if coupon %}
         <div class="col-12 text-right">
-          <p>Coupon applied with <strong>{{ coupon.discount }}%</strong> discount. You saved <strong>${{ coupon_saved }}</strong></p>
+          <p>Coupon <strong>{{ coupon }}</strong> applied with <strong>{{ coupon.discount }}%</strong> discount</p>
         </div>
         {% endif %}
         <div class="row">
