Add footer with mailchimp newsletter form

--- a/catalog/templates/home/specials.html
+++ b/catalog/templates/home/specials.html
@@ -12,7 +12,7 @@
           {{ num_products }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
       </p>
     </div>
-    <div class="jumbotron text-center mb-5">
+    <div class="jumbotron specials text-center mb-5">
       <h1 class="display-4">Specials</h1>
       <h4>Check out our latest offers and discounts</h4>
     </div>
