--- a/catalog/templates/home/index.html
+++ b/catalog/templates/home/index.html
@@ -4,15 +4,15 @@
 {% block content %}
 <section class="hero">
     <div class="container">
-        <h1>Welcome to our candle and essential oils store</h1>
-        <h4>Shop our selection of hand-poured candles and pure essential oils</h4>
-        <h4 class="mt-5">See our latest <a href="{% url 'specials' %}" class="text-white">Offers</a></h4>
+        <h1 class="hero-text">Welcome to our candle and essential oils store</h1>
+        <h4 class="py-3 hero-text">Shop from our selection of hand-poured candles and pure essential oils</h4>
+        <h4 class="mt-5"><span class="hero-text">Check out our latest</span> <a href="{% url 'specials' %}" class="btn-checkout p-1">Offers</a></h4>
     </div>
 </section>
 
 <section>
     <div class="container links border my-3">
-        <h2 class="text-center text-white">Discover our collection</h2>
+        <h2 class="text-center hero-text">Discover our collection</h2>
         <div class="row p-2">
             <div class="col-md-6">
                 <div class="card">
@@ -22,7 +22,7 @@
                         <h4 class="card-title">Candles</h4>
                         <p class="card-text">Explore our selection of hand-poured candles made with 100% soy wax and
                             pure essential oils.</p>
-                        <a href="{% url 'candles' %}" class="btn btn-primary">Shop Now</a>
+                        <a href="{% url 'candles' %}" class="btn btn-checkout">Shop Now</a>
                     </div>
                 </div>
                 <hr class="d-none">
@@ -35,7 +35,7 @@
                         <h4 class="card-title">Essential Oils</h4>
                         <p class="card-text">Discover our collection of pure essential oils, perfect for aromatherapy
                             and natural healing.</p>
-                        <a href="{% url 'essential_oils' %}" class="btn btn-primary">Shop Now</a>
+                        <a href="{% url 'essential_oils' %}" class="btn btn-checkout">Shop Now</a>
                     </div>
                 </div>
             </div>
@@ -52,22 +52,4 @@
     </div>
 </section>
 
-<section>
-    <div class="container newsletter col-md-4">
-        <h2>Subscribe to our Newsletter</h2>
-        <p>Stay up-to-date on our latest products and promotions by subscribing to our newsletter</p>
-        <form action="#">
-            <div class="form-row">
-                <div class="col-md-4 mb-3">
-                    <input type="email" class="form-control" placeholder="Enter your email">
-                </div>
-                <div class="col-md-4 mb-3">
-                    <button type="submit" class="btn btn-primary">Subscribe</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</section>
-
 {% endblock %}
-
