--- a/templates/base.html
+++ b/templates/base.html
@@ -15,17 +15,23 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+  <link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   {% endblock %}
 
   {% block extra_css %}
   {% endblock %}
-  
+
   {% block corejs %}
   <script src="https://kit.fontawesome.com/f5991483d4.js" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+    integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+    integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous">
+  </script>
   <script src="https://js.stripe.com/v3/"></script>
   {% endblock %}
 
@@ -87,7 +93,7 @@
                     {% if basket_total %}
                     ${{ basket_total|floatformat:2 }}
                     {% else %}
-                        $0.00
+                    $0.00
                     {% endif %}
                   </p>
                 </div>
@@ -119,21 +125,21 @@
 
 
   {% if messages %}
-      <div class="message-container">
-          {% for message in messages %}
-              {% with message.level as level %}
-                  {% if level == 40 %}
-                      {% include 'includes/toasts/toast_error.html' %}
-                  {% elif level == 30 %}
-                      {% include 'includes/toasts/toast_warning.html' %}
-                  {% elif level == 25 %}
-                      {% include 'includes/toasts/toast_success.html' %}
-                  {% else %}
-                      {% include 'includes/toasts/toast_info.html' %}
-                  {% endif %}
-              {% endwith %}
-          {% endfor %}
-      </div>
+  <div class="message-container">
+    {% for message in messages %}
+    {% with message.level as level %}
+    {% if level == 40 %}
+    {% include 'includes/toasts/toast_error.html' %}
+    {% elif level == 30 %}
+    {% include 'includes/toasts/toast_warning.html' %}
+    {% elif level == 25 %}
+    {% include 'includes/toasts/toast_success.html' %}
+    {% else %}
+    {% include 'includes/toasts/toast_info.html' %}
+    {% endif %}
+    {% endwith %}
+    {% endfor %}
+  </div>
   {% endif %}
 
   {% block page_header %}
@@ -142,12 +148,99 @@
   {% block content %}
   {% endblock %}
 
+  <footer class="footer bg-nav mt-auto py-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12" id="mc_embed_signup">
+          <form
+            action="https://herokuapp.us8.list-manage.com/subscribe/post?u=66ded1542002e4945d4cc9bfe&amp;id=f535030be4&amp;f_id=009a6ee0f0"
+            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+            target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+              <h2 class="text-black mb-3">Subscribe to our newsletter!</h2>
+              <small>To receive promotional offers and discounts.</small>
+              <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+              <div class="mc-field-group mb-3">
+                <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+                </label>
+                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
+                <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+              </div>
+              <div id="mce-responses" class="clear foot">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+              </div>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                  name="b_66ded1542002e4945d4cc9bfe_f535030be4" tabindex="-1" value=""></div>
+              <div class="optionalParent">
+                <div class="clear foot">
+                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                  <p class="brandingLogo"><a href="http://eepurl.com/ipHWb-"
+                      title="Mailchimp - email marketing made easy and fun"><img
+                        src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </form>
+
+          <!--End mc_embed_signup-->
+        </div>
+        
+        <div class="col-md-4 mt-3 text-white">
+          <h5>Contact Us</h5>
+          <ul class="list-unstyled">
+            <li>123 Main St.</li>
+            <li>Anytown, USA 12345</li>
+            <li>Phone: (123) 456-7890</li>
+            <li>Email: info@example.com</li>
+          </ul>
+        </div>
+        <div class="col-md-4 mt-3 text-white">
+          <h5>Follow Us</h5>
+          <ul class="list-unstyled list-inline">
+            <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
+            <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li class="list-inline-item"><a href="#"><i class="fab fa-pinterest"></i></a></li>
+          </ul>
+        </div>
+        <div class="col-md-4 mt-3 text-white">
+          <a href="">FAQ</a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
   {% block postloadjs %}
   <script type="text/javascript">
     $('.toast').toast('show');
   </script>
+  <!-- Mailchimp scripts -->
+  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+  <script type='text/javascript'>
+    (function ($) {
+      window.fnames = new Array();
+      window.ftypes = new Array();
+      fnames[0] = 'EMAIL';
+      ftypes[0] = 'email';
+      fnames[1] = 'FNAME';
+      ftypes[1] = 'text';
+      fnames[2] = 'LNAME';
+      ftypes[2] = 'text';
+      fnames[3] = 'ADDRESS';
+      ftypes[3] = 'address';
+      fnames[4] = 'PHONE';
+      ftypes[4] = 'phone';
+      fnames[5] = 'BIRTHDAY';
+      ftypes[5] = 'birthday';
+    }(jQuery));
+    var $mcj = jQuery.noConflict(true);
+  </script>
   {% endblock %}
 
 </body>
+
 
 </html>
