--- a/templates/base.html
+++ b/templates/base.html
@@ -194,7 +194,7 @@
             <li>123 Main St.</li>
             <li>Anytown, USA 12345</li>
             <li>Phone: (123) 456-7890</li>
-            <li>Email: info@example.com</li>
+            <li>Email: info@candlesandoils.com</li>
           </ul>
         </div>
         <div class="col-md-4 mt-3 text-white">
@@ -207,7 +207,7 @@
           </ul>
         </div>
         <div class="col-md-4 mt-3 text-white">
-          <a href="">FAQ</a>
+          <a href="{% url 'faq' %}">FAQ</a>
         </div>
       </div>
     </div>
