--- a/catalog/templates/home/index.html
+++ b/catalog/templates/home/index.html
@@ -6,7 +6,7 @@
     <div class="container">
         <h1 class="hero-text">Welcome to our candle and essential oils store</h1>
         <h4 class="py-3 hero-text">Shop from our selection of hand-poured candles and pure essential oils</h4>
-        <h4 class="mt-5"><span class="hero-text">Check out our latest</span> <a href="{% url 'specials' %}" class="btn-checkout p-1">Offers</a></h4>
+        <h4 class="mt-5"><span class="hero-text">Check out our latest</span> <a href="{% url 'specials' %}" class="btn btn-lg btn-checkout p-1">Offers</a></h4>
     </div>
 </section>
 
