Add sitemap, robots and favicon

--- a/catalog/templates/home/index.html
+++ b/catalog/templates/home/index.html
@@ -17,7 +17,7 @@
         <div class="row p-2">
             <div class="col-md-6">
                 <div class="card">
-                    <img src="{{ MEDIA_URL }}media/product_images/pexels-photo-6311974.jpeg" class="card-img-top"
+                    <img src="https://eddiestn-liquid-smoke.s3.amazonaws.com/media/product_images/pexels-photo-6311974.jpeg" class="card-img-top"
                         alt="Candles">
                     <div class="card-body">
                         <h4 class="card-title">Candles</h4>
@@ -30,7 +30,7 @@
             </div>
             <div class="col-md-6">
                 <div class="card">
-                    <img src="{{ MEDIA_URL }}media/product_images/pexels-photo-932577.jpeg" class="card-img-top"
+                    <img src="https://eddiestn-liquid-smoke.s3.amazonaws.com/media/product_images/pexels-photo-932577.jpeg" class="card-img-top"
                         alt="Essential Oils">
                     <div class="card-body">
                         <h4 class="card-title">Essential Oils</h4>
