--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Shop for high-quality candles and essential oils at our online store. We offer a wide selection of scents to suit any taste.">
+  <meta name="keywords" content="aromatherapy, scents, hand-made candles, scented candles, natural candles, soy candles, tea lights,
+     essential oil blends, diffusers, massage oils, body oils, home fragrance, relaxation, wellness">
+
+  <meta name="author" content="Liquid Smoke">
+
+
   {% endblock %}
 
   {% block corecss %}
@@ -16,6 +23,7 @@
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
   <link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
+  <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   {% endblock %}
 
