--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,7 +14,6 @@ body {
 
 .hero {
     background-image: url('s3://eddiestn-liquid-smoke/media/product_images/pexels-photo-6954560.jpeg');
-    /* background-image: url('/media/product_images/pexels-photo-6954560.jpeg'); */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -139,15 +138,14 @@ footer a {
     height: 2px;
 }
 
-/* ********** BASKET PAGE *********** */
-
 .specials {
-    /* background-image: url('s3://eddiestn-liquid-smoke/media/product_images/pexels-photo-5650048.jpeg'); */
-    background-image: url('/media/product_images/pexels-photo-5650048.jpeg');
+    background-image: url('s3://eddiestn-liquid-smoke/media/product_images/pexels-photo-5650048.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
+
+/* ********** BASKET PAGE *********** */
 
 table td,
 table th {
